SOURCES = [
    'hides/tsHiDesDeviceInfo.cpp',
    'hides/linux/tsHiDesDevice.cpp',
    'crypto/tsSCTE52.cpp',
    'crypto/tsAES256.cpp',
    'crypto/tsXoshiro256ss.cpp',
    'crypto/private/tsInitCryptoLibrary.cpp',
    'crypto/private/tsCRC32.accel.cpp',
    'crypto/tsSHA512.cpp',
    'crypto/tsBlockCipher.cpp',
    'crypto/tsHash.cpp',
    'crypto/tsDVBCISSA.cpp',
    'crypto/tsRandomGenerator.cpp',
    'crypto/tsBlockCipherAlertInterface.cpp',
    'crypto/tsSystemRandomGenerator.cpp',
    'crypto/tsIDSA.cpp',
    'crypto/tsBlockCipherProperties.cpp',
    'crypto/tsSHA256.cpp',
    'crypto/tsSHA1.cpp',
    'crypto/tsDVBCSA2.cpp',
    'crypto/tsDES.cpp',
    'crypto/tsCryptoLibrary.cpp',
    'crypto/tsBetterSystemRandomGenerator.cpp',
    'crypto/tsCRC32.cpp',
    'crypto/tsAES128.cpp',
    'crypto/tsTDES.cpp',
    'dtv/charset/tsCharset.cpp',
    'dtv/charset/tsDVBCharTable.cpp',
    'dtv/charset/tsDVBCharset.cpp',
    'dtv/charset/tsDVBCharTableUTF16.cpp',
    'dtv/charset/tsARIBCharsetData.cpp',
    'dtv/charset/tsDVBCharTableUTF8.cpp',
    'dtv/charset/tsARIBCharset.cpp',
    'dtv/charset/tsDVBCharTableSingleByte.cpp',
    'dtv/charset/tsARIBCharsetEncoding.cpp',
    'dtv/charset/tsDumpCharset.cpp',
    'dtv/timing/tsPCRRegulator.cpp',
    'dtv/timing/tsBitRateRegulator.cpp',
    'dtv/timing/tsPacketInsertionController.cpp',
    'dtv/timing/tsTimeShiftBuffer.cpp',
    'dtv/timing/tsPCRAnalyzer.cpp',
    'dtv/timing/tsTSSpeedMetrics.cpp',
    'dtv/timing/tsPCRMerger.cpp',
    'dtv/linux/tsDTVProperties.cpp',
    'dtv/linux/tsTunerDevice.cpp',
    'dtv/linux/tsTunerDeviceInfo.cpp',
    'dtv/pes/tsPESPacketizer.cpp',
    'dtv/pes/tsPESPacket.cpp',
    'dtv/pes/tsPESOneShotPacketizer.cpp',
    'dtv/pes/tsPESDemux.cpp',
    'dtv/pes/tsPESHandlerInterface.cpp',
    'dtv/pes/tsPESStreamPacketizer.cpp',
    'dtv/pes/tsPES.cpp',
    'dtv/pes/tsPESProviderInterface.cpp',
    'dtv/standards/tsOUI.cpp',
    'dtv/standards/tsStandards.cpp',
    'dtv/standards/tsDuckContext.cpp',
    'dtv/t2mi/tsT2MIPacket.cpp',
    'dtv/t2mi/tsT2MIHandlerInterface.cpp',
    'dtv/t2mi/tsT2MIDemux.cpp',
    'dtv/codec/tsAbstractAVCAccessUnit.cpp',
    'dtv/codec/tsHEVCScalingListData.cpp',
    'dtv/codec/tsAVCHRDParameters.cpp',
    'dtv/codec/tsAbstractHEVCAccessUnit.cpp',
    'dtv/codec/tsHEVCAccessUnitDelimiter.cpp',
    'dtv/codec/tsAccessUnitIterator.cpp',
    'dtv/codec/tsVVCAccessUnitDelimiter.cpp',
    'dtv/codec/tsHEVCHRDParameters.cpp',
    'dtv/codec/tsAbstractVVCAccessUnit.cpp',
    'dtv/codec/tsMPEG2VideoAttributes.cpp',
    'dtv/codec/tsAbstractVideoStructure.cpp',
    'dtv/codec/tsAbstractAudioVideoAttributes.cpp',
    'dtv/codec/tsMPEG2AudioAttributes.cpp',
    'dtv/codec/tsAbstractVideoAccessUnit.cpp',
    'dtv/codec/tsHEVCProfileTierLevel.cpp',
    'dtv/codec/tsAVCVUIParameters.cpp',
    'dtv/codec/tsHEVCShortTermReferencePictureSetList.cpp',
    'dtv/codec/tsHEVCSequenceParameterSet.cpp',
    'dtv/codec/tsAVCAttributes.cpp',
    'dtv/codec/tsAVCSequenceParameterSet.cpp',
    'dtv/codec/tsAVCAccessUnitDelimiter.cpp',
    'dtv/codec/tsAC3Attributes.cpp',
    'dtv/codec/tsAbstractVideoData.cpp',
    'dtv/codec/tsHEVCAttributes.cpp',
    'dtv/codec/tsAVCParser.cpp',
    'dtv/codec/tsHEVCVUIParameters.cpp',
    'dtv/codec/tsCodecType.cpp',
    'dtv/encap/tsPacketDecapsulation.cpp',
    'dtv/encap/tsPacketEncapsulation.cpp',
    'dtv/cas/tsCAS.cpp',
    'dtv/cas/tsTSScrambling.cpp',
    'dtv/cas/tsCASSelectionArgs.cpp',
    'dtv/cas/tsPIDOperator.cpp',
    'dtv/cas/tsKeyTable.cpp',
    'dtv/cas/tsCASMapper.cpp',
    'dtv/analysis/tsTSAnalyzerOptions.cpp',
    'dtv/analysis/tsTr101Analyzer.cpp',
    'dtv/analysis/tsTSAnalyzerReport.cpp',
    'dtv/analysis/tsContinuityAnalyzer.cpp',
    'dtv/analysis/tsTSAnalyzer.cpp',
    'dtv/teletext/tsTeletextDemux.cpp',
    'dtv/teletext/tsTeletextHandlerInterface.cpp',
    'dtv/teletext/tsSubRipGenerator.cpp',
    'dtv/teletext/tsTeletextCharset.cpp',
    'dtv/signalization/tsISDBTInformation.cpp',
    'dtv/signalization/tsISDBTInformationPacket.cpp',
    'dtv/signalization/tsServiceDiscovery.cpp',
    'dtv/signalization/tsREGID.cpp',
    'dtv/signalization/tsTablesLoggerFilter.cpp',
    'dtv/signalization/tsXDID.cpp',
    'dtv/signalization/tsEDID.cpp',
    'dtv/signalization/tsAbstractSignalization.cpp',
    'dtv/signalization/tsTablesDisplay.cpp',
    'dtv/signalization/tsPSIMerger.cpp',
    'dtv/signalization/tsDID.cpp',
    'dtv/signalization/tsDescriptorContext.cpp',
    'dtv/signalization/tsAbstractDefinedByStandards.cpp',
    'dtv/signalization/tsSpliceSchedule.cpp',
    'dtv/signalization/tsTablesLoggerFilterRepository.cpp',
    'dtv/signalization/tsAudioLanguageOptions.cpp',
    'dtv/signalization/tsTID.cpp',
    'dtv/signalization/tsDVB.cpp',
    'dtv/signalization/tsTablesLogger.cpp',
    'dtv/signalization/tsService.cpp',
    'dtv/signalization/tsPDS.cpp',
    'dtv/signalization/tsTablesLoggerFilterInterface.cpp',
    'dtv/signalization/tsSection.cpp',
    'dtv/signalization/tsDescriptor.cpp',
    'dtv/signalization/tsMJD.cpp',
    'dtv/signalization/tsStreamType.cpp',
    'dtv/signalization/tsPSIBuffer.cpp',
    'dtv/signalization/tsSectionFile.cpp',
    'dtv/signalization/tsPSIRepository.cpp',
    'dtv/signalization/tsSCTE35.cpp',
    'dtv/signalization/tsDescriptorList.cpp',
    'dtv/signalization/tsXTID.cpp',
    'dtv/signalization/tsServiceIdTriplet.cpp',
    'dtv/signalization/tsSectionFormat.cpp',
    'dtv/signalization/tsTransportStreamId.cpp',
    'dtv/signalization/tsSpliceInsert.cpp',
    'dtv/signalization/tsSectionFileArgs.cpp',
    'dtv/signalization/tsPSILogger.cpp',
    'dtv/signalization/tsLogicalChannelNumbers.cpp',
    'dtv/signalization/tsSectionContext.cpp',
    'dtv/signalization/tsATSCMultipleString.cpp',
    'dtv/signalization/tsBinaryTable.cpp',
    'dtv/signalization/tsISDB.cpp',
    'dtv/signalization/tsTablePatchXML.cpp',
    'dtv/dvbsimulcrypt/tstlvLogger.cpp',
    'dtv/dvbsimulcrypt/tsDuckProtocol.cpp',
    'dtv/dvbsimulcrypt/tsEMMGClient.cpp',
    'dtv/dvbsimulcrypt/tsECMGSCS.cpp',
    'dtv/dvbsimulcrypt/tsECMGClientArgs.cpp',
    'dtv/dvbsimulcrypt/tstlvAnalyzer.cpp',
    'dtv/dvbsimulcrypt/tstlvStreamMessage.cpp',
    'dtv/dvbsimulcrypt/tsECMGClientHandlerInterface.cpp',
    'dtv/dvbsimulcrypt/tstlvMessageFactory.cpp',
    'dtv/dvbsimulcrypt/tstlvChannelMessage.cpp',
    'dtv/dvbsimulcrypt/tstlvMessage.cpp',
    'dtv/dvbsimulcrypt/tsECMGClient.cpp',
    'dtv/dvbsimulcrypt/tsEMMGMUX.cpp',
    'dtv/dvbsimulcrypt/tsSimulCryptDate.cpp',
    'dtv/dvbsimulcrypt/tstlvProtocol.cpp',
    'dtv/dvbsimulcrypt/tstlvSerializer.cpp',
    'dtv/descriptors/atsc/tsATSCStuffingDescriptor.cpp',
    'dtv/descriptors/atsc/tsServiceLocationDescriptor.cpp',
    'dtv/descriptors/atsc/tsComponentNameDescriptor.cpp',
    'dtv/descriptors/atsc/tsContentAdvisoryDescriptor.cpp',
    'dtv/descriptors/atsc/tsCaptionServiceDescriptor.cpp',
    'dtv/descriptors/atsc/tsRedistributionControlDescriptor.cpp',
    'dtv/descriptors/atsc/tsATSCAC3AudioStreamDescriptor.cpp',
    'dtv/descriptors/atsc/tsATSCTimeShiftedServiceDescriptor.cpp',
    'dtv/descriptors/atsc/tsATSCEAC3AudioDescriptor.cpp',
    'dtv/descriptors/atsc/tsExtendedChannelNameDescriptor.cpp',
    'dtv/descriptors/atsc/tsDCCDepartingRequestDescriptor.cpp',
    'dtv/descriptors/atsc/tsDCCArrivingRequestDescriptor.cpp',
    'dtv/descriptors/atsc/tsGenreDescriptor.cpp',
    'dtv/descriptors/eacem/tsEacemStreamIdentifierDescriptor.cpp',
    'dtv/descriptors/eacem/tsEacemPreferredNameIdentifierDescriptor.cpp',
    'dtv/descriptors/eacem/tsEacemHDSimulcastLogicalChannelDescriptor.cpp',
    'dtv/descriptors/eacem/tsEacemPreferredNameListDescriptor.cpp',
    'dtv/descriptors/eacem/tsEacemLogicalChannelNumberDescriptor.cpp',
    'dtv/descriptors/tsAbstractDescriptor.cpp',
    'dtv/descriptors/dvb/tsDefaultAuthorityDescriptor.cpp',
    'dtv/descriptors/dvb/tsS2XSatelliteDeliverySystemDescriptor.cpp',
    'dtv/descriptors/dvb/tsExternalApplicationAuthorizationDescriptor.cpp',
    'dtv/descriptors/dvb/tsStreamIdentifierDescriptor.cpp',
    'dtv/descriptors/dvb/tsScramblingDescriptor.cpp',
    'dtv/descriptors/dvb/tsShortSmoothingBufferDescriptor.cpp',
    'dtv/descriptors/dvb/tsAnnouncementSupportDescriptor.cpp',
    'dtv/descriptors/dvb/tsC2BundleDeliverySystemDescriptor.cpp',
    'dtv/descriptors/dvb/tsTargetSerialNumberDescriptor.cpp',
    'dtv/descriptors/dvb/tsContentIdentifierDescriptor.cpp',
    'dtv/descriptors/dvb/tsSchedulingDescriptor.cpp',
    'dtv/descriptors/dvb/tsTargetRegionDescriptor.cpp',
    'dtv/descriptors/dvb/tsDVBEnhancedAC3Descriptor.cpp',
    'dtv/descriptors/dvb/tsSimpleApplicationLocationDescriptor.cpp',
    'dtv/descriptors/dvb/tsTransportStreamDescriptor.cpp',
    'dtv/descriptors/dvb/tsExtendedEventDescriptor.cpp',
    'dtv/descriptors/dvb/tsDSMCCTypeDescriptor.cpp',
    'dtv/descriptors/dvb/tsS2Xv2SatelliteDeliverySystemDescriptor.cpp',
    'dtv/descriptors/dvb/tsDIILocationDescriptor.cpp',
    'dtv/descriptors/dvb/tsAACDescriptor.cpp',
    'dtv/descriptors/dvb/tsTeletextDescriptor.cpp',
    'dtv/descriptors/dvb/tsDVBAC4Descriptor.cpp',
    'dtv/descriptors/dvb/tsXAITLocationDescriptor.cpp',
    'dtv/descriptors/dvb/tsSSUEventNameDescriptor.cpp',
    'dtv/descriptors/dvb/tsParentalRatingDescriptor.cpp',
    'dtv/descriptors/dvb/tsApplicationIconsDescriptor.cpp',
    'dtv/descriptors/dvb/tsSatelliteDeliverySystemDescriptor.cpp',
    'dtv/descriptors/dvb/tsVVCSubpicturesDescriptor.cpp',
    'dtv/descriptors/dvb/tsServiceIdentifierDescriptor.cpp',
    'dtv/descriptors/dvb/tsDSMCCLabelDescriptor.cpp',
    'dtv/descriptors/dvb/tsMultilingualNetworkNameDescriptor.cpp',
    'dtv/descriptors/dvb/tsVBIDataDescriptor.cpp',
    'dtv/descriptors/dvb/tsDTSHDDescriptor.cpp',
    'dtv/descriptors/dvb/tsISPAccessModeDescriptor.cpp',
    'dtv/descriptors/dvb/tsTransportProtocolDescriptor.cpp',
    'dtv/descriptors/dvb/tsAncillaryDataDescriptor.cpp',
    'dtv/descriptors/dvb/tsNVODReferenceDescriptor.cpp',
    'dtv/descriptors/dvb/tsLinkageDescriptor.cpp',
    'dtv/descriptors/dvb/tsCIAncillaryDataDescriptor.cpp',
    'dtv/descriptors/dvb/tsApplicationDescriptor.cpp',
    'dtv/descriptors/dvb/tsECMRepetitionRateDescriptor.cpp',
    'dtv/descriptors/dvb/tsDVBAC3Descriptor.cpp',
    'dtv/descriptors/dvb/tsIPMACPlatformNameDescriptor.cpp',
    'dtv/descriptors/dvb/tsTargetMACAddressDescriptor.cpp',
    'dtv/descriptors/dvb/tsSHDeliverySystemDescriptor.cpp',
    'dtv/descriptors/dvb/tsTargetRegionNameDescriptor.cpp',
    'dtv/descriptors/dvb/tsCPIdentifierDescriptor.cpp',
    'dtv/descriptors/dvb/tsTimeSliceFECIdentifierDescriptor.cpp',
    'dtv/descriptors/dvb/tsT2DeliverySystemDescriptor.cpp',
    'dtv/descriptors/dvb/tsCableDeliverySystemDescriptor.cpp',
    'dtv/descriptors/dvb/tsDVBStuffingDescriptor.cpp',
    'dtv/descriptors/dvb/tsDSMCCGroupLinkDescriptor.cpp',
    'dtv/descriptors/dvb/tsSupplementaryAudioDescriptor.cpp',
    'dtv/descriptors/dvb/tsVideoDepthRangeDescriptor.cpp',
    'dtv/descriptors/dvb/tsBouquetNameDescriptor.cpp',
    'dtv/descriptors/dvb/tsPDCDescriptor.cpp',
    'dtv/descriptors/dvb/tsApplicationNameDescriptor.cpp',
    'dtv/descriptors/dvb/tsC2DeliverySystemDescriptor.cpp',
    'dtv/descriptors/dvb/tsDSMCCSSUModuleTypeDescriptor.cpp',
    'dtv/descriptors/dvb/tsImageIconDescriptor.cpp',
    'dtv/descriptors/dvb/tsDVBHTMLApplicationLocationDescriptor.cpp',
    'dtv/descriptors/dvb/tsT2MIDescriptor.cpp',
    'dtv/descriptors/dvb/tsDSNGDescriptor.cpp',
    'dtv/descriptors/dvb/tsDVBJApplicationDescriptor.cpp',
    'dtv/descriptors/dvb/tsTerrestrialDeliverySystemDescriptor.cpp',
    'dtv/descriptors/dvb/tsRARoverDVBstreamDescriptor.cpp',
    'dtv/descriptors/dvb/tsAbstractPreferredNameIdentifierDescriptor.cpp',
    'dtv/descriptors/dvb/tsComponentDescriptor.cpp',
    'dtv/descriptors/dvb/tsCPDescriptor.cpp',
    'dtv/descriptors/dvb/tsCPCMDeliverySignallingDescriptor.cpp',
    'dtv/descriptors/dvb/tsAbstractMultilingualDescriptor.cpp',
    'dtv/descriptors/dvb/tsMultilingualBouquetNameDescriptor.cpp',
    'dtv/descriptors/dvb/tsTargetIPv6SourceSlashDescriptor.cpp',
    'dtv/descriptors/dvb/tsApplicationSignallingDescriptor.cpp',
    'dtv/descriptors/dvb/tsSSUEnhancedMessageDescriptor.cpp',
    'dtv/descriptors/dvb/tsRNTScanDescriptor.cpp',
    'dtv/descriptors/dvb/tsDSMCCSubgroupAssociationDescriptor.cpp',
    'dtv/descriptors/dvb/tsShortEventDescriptor.cpp',
    'dtv/descriptors/dvb/tsAbstractDeliverySystemDescriptor.cpp',
    'dtv/descriptors/dvb/tsTargetSmartcardDescriptor.cpp',
    'dtv/descriptors/dvb/tsDVBHTMLApplicationDescriptor.cpp',
    'dtv/descriptors/dvb/tsDSMCCEstDownloadTimeDescriptor.cpp',
    'dtv/descriptors/dvb/tsSSUSubgroupAssociationDescriptor.cpp',
    'dtv/descriptors/dvb/tsTargetIPv6AddressDescriptor.cpp',
    'dtv/descriptors/dvb/tsDVBTimeShiftedServiceDescriptor.cpp',
    'dtv/descriptors/dvb/tsDTSNeuralDescriptor.cpp',
    'dtv/descriptors/dvb/tsAdaptationFieldDataDescriptor.cpp',
    'dtv/descriptors/dvb/tsTargetIPAddressDescriptor.cpp',
    'dtv/descriptors/dvb/tsSubtitlingDescriptor.cpp',
    'dtv/descriptors/dvb/tsSimpleApplicationBoundaryDescriptor.cpp',
    'dtv/descriptors/dvb/tsCAIdentifierDescriptor.cpp',
    'dtv/descriptors/dvb/tsMessageDescriptor.cpp',
    'dtv/descriptors/dvb/tsDSMCCNameDescriptor.cpp',
    'dtv/descriptors/dvb/tsSSUURIDescriptor.cpp',
    'dtv/descriptors/dvb/tsTargetIPSourceSlashDescriptor.cpp',
    'dtv/descriptors/dvb/tsCellListDescriptor.cpp',
    'dtv/descriptors/dvb/tsDSMCCLocationDescriptor.cpp',
    'dtv/descriptors/dvb/tsTargetIPv6SlashDescriptor.cpp',
    'dtv/descriptors/dvb/tsTTMLSubtitlingDescriptor.cpp',
    'dtv/descriptors/dvb/tsDVBServiceProminenceDescriptor.cpp',
    'dtv/descriptors/dvb/tsNetworkChangeNotifyDescriptor.cpp',
    'dtv/descriptors/dvb/tsCountryAvailabilityDescriptor.cpp',
    'dtv/descriptors/dvb/tsServiceMoveDescriptor.cpp',
    'dtv/descriptors/dvb/tsAbstractPreferredNameListDescriptor.cpp',
    'dtv/descriptors/dvb/tsFrequencyListDescriptor.cpp',
    'dtv/descriptors/dvb/tsMultilingualComponentDescriptor.cpp',
    'dtv/descriptors/dvb/tsRelatedContentDescriptor.cpp',
    'dtv/descriptors/dvb/tsIPMACPlatformProviderNameDescriptor.cpp',
    'dtv/descriptors/dvb/tsFTAContentManagementDescriptor.cpp',
    'dtv/descriptors/dvb/tsIPSignallingDescriptor.cpp',
    'dtv/descriptors/dvb/tsTargetIPSlashDescriptor.cpp',
    'dtv/descriptors/dvb/tsMultilingualServiceNameDescriptor.cpp',
    'dtv/descriptors/dvb/tsContentDescriptor.cpp',
    'dtv/descriptors/dvb/tsDVBDTSUHDDescriptor.cpp',
    'dtv/descriptors/dvb/tsVBITeletextDescriptor.cpp',
    'dtv/descriptors/dvb/tsTimeShiftedEventDescriptor.cpp',
    'dtv/descriptors/dvb/tsDataBroadcastDescriptor.cpp',
    'dtv/descriptors/dvb/tsDSMCCCompressedModuleDescriptor.cpp',
    'dtv/descriptors/dvb/tsS2SatelliteDeliverySystemDescriptor.cpp',
    'dtv/descriptors/dvb/tsPartialTransportStreamDescriptor.cpp',
    'dtv/descriptors/dvb/tsAbstractLogicalChannelDescriptor.cpp',
    'dtv/descriptors/dvb/tsLocalTimeOffsetDescriptor.cpp',
    'dtv/descriptors/dvb/tsIPMACStreamLocationDescriptor.cpp',
    'dtv/descriptors/dvb/tsPrivateDataSpecifierDescriptor.cpp',
    'dtv/descriptors/dvb/tsSSULocationDescriptor.cpp',
    'dtv/descriptors/dvb/tsServiceAvailabilityDescriptor.cpp',
    'dtv/descriptors/dvb/tsTelephoneDescriptor.cpp',
    'dtv/descriptors/dvb/tsDVBHTMLApplicationBoundaryDescriptor.cpp',
    'dtv/descriptors/dvb/tsDSMCCCachingPriorityDescriptor.cpp',
    'dtv/descriptors/dvb/tsXAITPIDDescriptor.cpp',
    'dtv/descriptors/dvb/tsServiceDescriptor.cpp',
    'dtv/descriptors/dvb/tsSSULinkageDescriptor.cpp',
    'dtv/descriptors/dvb/tsApplicationUsageDescriptor.cpp',
    'dtv/descriptors/dvb/tsURILinkageDescriptor.cpp',
    'dtv/descriptors/dvb/tsNetworkNameDescriptor.cpp',
    'dtv/descriptors/dvb/tsServiceListDescriptor.cpp',
    'dtv/descriptors/dvb/tsProtectionMessageDescriptor.cpp',
    'dtv/descriptors/dvb/tsAudioPreselectionDescriptor.cpp',
    'dtv/descriptors/dvb/tsUpdateDescriptor.cpp',
    'dtv/descriptors/dvb/tsDataBroadcastIdDescriptor.cpp',
    'dtv/descriptors/dvb/tsSSUMessageDescriptor.cpp',
    'dtv/descriptors/dvb/tsDSMCCModuleLinkDescriptor.cpp',
    'dtv/descriptors/dvb/tsGraphicsConstraintsDescriptor.cpp',
    'dtv/descriptors/dvb/tsDSMCCCRC32Descriptor.cpp',
    'dtv/descriptors/dvb/tsTVAIdDescriptor.cpp',
    'dtv/descriptors/dvb/tsDTSDescriptor.cpp',
    'dtv/descriptors/dvb/tsRARoverIPDescriptor.cpp',
    'dtv/descriptors/dvb/tsApplicationRecordingDescriptor.cpp',
    'dtv/descriptors/dvb/tsMosaicDescriptor.cpp',
    'dtv/descriptors/dvb/tsCellFrequencyLinkDescriptor.cpp',
    'dtv/descriptors/dvb/tsApplicationStorageDescriptor.cpp',
    'dtv/descriptors/dvb/tsDSMCCInfoDescriptor.cpp',
    'dtv/descriptors/dvb/tsIPMACGenericStreamLocationDescriptor.cpp',
    'dtv/descriptors/dvb/tsDVBJApplicationLocationDescriptor.cpp',
    'dtv/descriptors/dvb/tsServiceRelocatedDescriptor.cpp',
    'dtv/descriptors/dvb/tsTargetMACAddressRangeDescriptor.cpp',
    'dtv/descriptors/dvb/tsSSUDataBroadcastIdDescriptor.cpp',
    'dtv/descriptors/dvb/tsPrefetchDescriptor.cpp',
    'dtv/descriptors/avs/tsAVS3AudioDescriptor.cpp',
    'dtv/descriptors/avs/tsAVS2AudioDescriptor.cpp',
    'dtv/descriptors/avs/tsAVS3VideoDescriptor.cpp',
    'dtv/descriptors/scte/tsSpliceAvailDescriptor.cpp',
    'dtv/descriptors/scte/tsCueIdentifierDescriptor.cpp',
    'dtv/descriptors/scte/tsSpliceTimeDescriptor.cpp',
    'dtv/descriptors/scte/tsEASMetadataDescriptor.cpp',
    'dtv/descriptors/scte/tsEASInbandExceptionChannelsDescriptor.cpp',
    'dtv/descriptors/scte/tsEASAudioFileDescriptor.cpp',
    'dtv/descriptors/scte/tsEASInbandDetailsChannelDescriptor.cpp',
    'dtv/descriptors/scte/tsSpliceSegmentationDescriptor.cpp',
    'dtv/descriptors/scte/tsSpliceDTMFDescriptor.cpp',
    'dtv/descriptors/dtg/tsDTGPreferredNameIdentifierDescriptor.cpp',
    'dtv/descriptors/dtg/tsDTGServiceAttributeDescriptor.cpp',
    'dtv/descriptors/dtg/tsDTGHDSimulcastLogicalChannelDescriptor.cpp',
    'dtv/descriptors/dtg/tsDTGLogicalChannelDescriptor.cpp',
    'dtv/descriptors/dtg/tsDTGPreferredNameListDescriptor.cpp',
    'dtv/descriptors/dtg/tsDTGGuidanceDescriptor.cpp',
    'dtv/descriptors/dtg/tsDTGShortServiceNameDescriptor.cpp',
    'dtv/descriptors/mpeg/tsVVCVideoDescriptor.cpp',
    'dtv/descriptors/mpeg/tsMPEGH3DAudioSceneDescriptor.cpp',
    'dtv/descriptors/mpeg/tsMetadataDescriptor.cpp',
    'dtv/descriptors/mpeg/tsSTDDescriptor.cpp',
    'dtv/descriptors/mpeg/tsPrivateDataIndicatorDescriptor.cpp',
    'dtv/descriptors/mpeg/tsTargetBackgroundGridDescriptor.cpp',
    'dtv/descriptors/mpeg/tsMPEG2StereoscopicVideoFormatDescriptor.cpp',
    'dtv/descriptors/mpeg/tsAVCVideoDescriptor.cpp',
    'dtv/descriptors/mpeg/tsSLDescriptor.cpp',
    'dtv/descriptors/mpeg/tsSmoothingBufferDescriptor.cpp',
    'dtv/descriptors/mpeg/tsTransportProfileDescriptor.cpp',
    'dtv/descriptors/mpeg/tsJPEGXSVideoDescriptor.cpp',
    'dtv/descriptors/mpeg/tsM4MuxTimingDescriptor.cpp',
    'dtv/descriptors/mpeg/tsSystemClockDescriptor.cpp',
    'dtv/descriptors/mpeg/tsLCEVCLinkageDescriptor.cpp',
    'dtv/descriptors/mpeg/tsHierarchyDescriptor.cpp',
    'dtv/descriptors/mpeg/tsQualityExtensionDescriptor.cpp',
    'dtv/descriptors/mpeg/tsMetadataPointerDescriptor.cpp',
    'dtv/descriptors/mpeg/tsMVCExtensionDescriptor.cpp',
    'dtv/descriptors/mpeg/tsHEVCSubregionDescriptor.cpp',
    'dtv/descriptors/mpeg/tsMaximumBitrateDescriptor.cpp',
    'dtv/descriptors/mpeg/tsISO639LanguageDescriptor.cpp',
    'dtv/descriptors/mpeg/tsExternalESIdDescriptor.cpp',
    'dtv/descriptors/mpeg/tsMPEGH3DAudioDescriptor.cpp',
    'dtv/descriptors/mpeg/tsStreamModeDescriptor.cpp',
    'dtv/descriptors/mpeg/tsHEVCHierarchyExtensionDescriptor.cpp',
    'dtv/descriptors/mpeg/tsSVCExtensionDescriptor.cpp',
    'dtv/descriptors/mpeg/tsVVCTimingAndHRDDescriptor.cpp',
    'dtv/descriptors/mpeg/tsStereoscopicProgramInfoDescriptor.cpp',
    'dtv/descriptors/mpeg/tsHEVCVideoDescriptor.cpp',
    'dtv/descriptors/mpeg/tsAFExtensionsDescriptor.cpp',
    'dtv/descriptors/mpeg/tsMPEGH3DAudioConfigDescriptor.cpp',
    'dtv/descriptors/mpeg/tsContentLabellingDescriptor.cpp',
    'dtv/descriptors/mpeg/tsMPEG4TextDescriptor.cpp',
    'dtv/descriptors/mpeg/tsEVCVideoDescriptor.cpp',
    'dtv/descriptors/mpeg/tsNPTEndpointDescriptor.cpp',
    'dtv/descriptors/mpeg/tsMPEGH3DAudioMultiStreamDescriptor.cpp',
    'dtv/descriptors/mpeg/tsLCEVCVideoDescriptor.cpp',
    'dtv/descriptors/mpeg/tsGreenExtensionDescriptor.cpp',
    'dtv/descriptors/mpeg/tsMuxcodeDescriptor.cpp',
    'dtv/descriptors/mpeg/tsHEVCTileSubstreamDescriptor.cpp',
    'dtv/descriptors/mpeg/tsAVCTimingAndHRDDescriptor.cpp',
    'dtv/descriptors/mpeg/tsCarouselIdentifierDescriptor.cpp',
    'dtv/descriptors/mpeg/tsAuxiliaryVideoStreamDescriptor.cpp',
    'dtv/descriptors/mpeg/tsMPEG2AACAudioDescriptor.cpp',
    'dtv/descriptors/mpeg/tsMPEG4VideoDescriptor.cpp',
    'dtv/descriptors/mpeg/tsAssociationTagDescriptor.cpp',
    'dtv/descriptors/mpeg/tsMPEG4AudioExtensionDescriptor.cpp',
    'dtv/descriptors/mpeg/tsHEVCTimingAndHRDDescriptor.cpp',
    'dtv/descriptors/mpeg/tsMVCOperationPointDescriptor.cpp',
    'dtv/descriptors/mpeg/tsStereoscopicVideoInfoDescriptor.cpp',
    'dtv/descriptors/mpeg/tsCopyrightDescriptor.cpp',
    'dtv/descriptors/mpeg/tsMPEGH3DAudioCommandDescriptor.cpp',
    'dtv/descriptors/mpeg/tsCADescriptor.cpp',
    'dtv/descriptors/mpeg/tsJ2KVideoDescriptor.cpp',
    'dtv/descriptors/mpeg/tsMultiplexBufferDescriptor.cpp',
    'dtv/descriptors/mpeg/tsMPEGH3DAudioDRCLoudnessDescriptor.cpp',
    'dtv/descriptors/mpeg/tsMediaServiceKindDescriptor.cpp',
    'dtv/descriptors/mpeg/tsDataStreamAlignmentDescriptor.cpp',
    'dtv/descriptors/mpeg/tsRegistrationDescriptor.cpp',
    'dtv/descriptors/mpeg/tsHEVCOperationPointDescriptor.cpp',
    'dtv/descriptors/mpeg/tsVirtualSegmentationDescriptor.cpp',
    'dtv/descriptors/mpeg/tsVideoWindowDescriptor.cpp',
    'dtv/descriptors/mpeg/tsMetadataSTDDescriptor.cpp',
    'dtv/descriptors/mpeg/tsVideoStreamDescriptor.cpp',
    'dtv/descriptors/mpeg/tsIODDescriptor.cpp',
    'dtv/descriptors/mpeg/tsIBPDescriptor.cpp',
    'dtv/descriptors/mpeg/tsEVCTimingAndHRDDescriptor.cpp',
    'dtv/descriptors/mpeg/tsNPTReferenceDescriptor.cpp',
    'dtv/descriptors/mpeg/tsMPEG4AudioDescriptor.cpp',
    'dtv/descriptors/mpeg/tsStreamEventDescriptor.cpp',
    'dtv/descriptors/mpeg/tsFMCDescriptor.cpp',
    'dtv/descriptors/mpeg/tsAudioStreamDescriptor.cpp',
    'dtv/descriptors/mpeg/tsDeferredAssociationTagsDescriptor.cpp',
    'dtv/descriptors/mpeg/tsMasteringDisplayMetadata.cpp',
    'dtv/descriptors/mpeg/tsMultiplexBufferUtilizationDescriptor.cpp',
    'dtv/descriptors/mpeg/tsMPEGH3DAudioTextLabelDescriptor.cpp',
    'dtv/descriptors/mpeg/tsM4MuxBufferSizeDescriptor.cpp',
    'dtv/descriptors/nordig/tsNorDigLogicalChannelDescriptorV1.cpp',
    'dtv/descriptors/nordig/tsNorDigLogicalChannelDescriptorV2.cpp',
    'dtv/descriptors/eutelsat/tsEutelsatChannelNumberDescriptor.cpp',
    'dtv/descriptors/uwa/tsUWAVideoStreamDescriptor.cpp',
    'dtv/descriptors/aom/tsAV1VideoDescriptor.cpp',
    'dtv/descriptors/australia/tsAustraliaLogicalChannelDescriptor.cpp',
    'dtv/descriptors/sky/tsSkyLogicalChannelNumberDescriptor.cpp',
    'dtv/descriptors/isdb/tsHybridInformationDescriptor.cpp',
    'dtv/descriptors/isdb/tsAreaBroadcastingInformationDescriptor.cpp',
    'dtv/descriptors/isdb/tsServiceGroupDescriptor.cpp',
    'dtv/descriptors/isdb/tsVideoDecodeControlDescriptor.cpp',
    'dtv/descriptors/isdb/tsHierarchicalTransmissionDescriptor.cpp',
    'dtv/descriptors/isdb/tsBoardInformationDescriptor.cpp',
    'dtv/descriptors/isdb/tsISDBAccessControlDescriptor.cpp',
    'dtv/descriptors/isdb/tsNetworkDownloadContentDescriptor.cpp',
    'dtv/descriptors/isdb/tsBasicLocalEventDescriptor.cpp',
    'dtv/descriptors/isdb/tsPartialTSTimeDescriptor.cpp',
    'dtv/descriptors/isdb/tsCAEMMTSDescriptor.cpp',
    'dtv/descriptors/isdb/tsDownloadContentDescriptor.cpp',
    'dtv/descriptors/isdb/tsShortNodeInformationDescriptor.cpp',
    'dtv/descriptors/isdb/tsAbstractDownloadContentDescriptor.cpp',
    'dtv/descriptors/isdb/tsCAServiceDescriptor.cpp',
    'dtv/descriptors/isdb/tsNodeRelationDescriptor.cpp',
    'dtv/descriptors/isdb/tsEventGroupDescriptor.cpp',
    'dtv/descriptors/isdb/tsLogoTransmissionDescriptor.cpp',
    'dtv/descriptors/isdb/tsSIPrimeTSDescriptor.cpp',
    'dtv/descriptors/isdb/tsConditionalPlaybackDescriptor.cpp',
    'dtv/descriptors/isdb/tsISDBHyperlinkDescriptor.cpp',
    'dtv/descriptors/isdb/tsReferenceDescriptor.cpp',
    'dtv/descriptors/isdb/tsSTCReferenceDescriptor.cpp',
    'dtv/descriptors/isdb/tsISDBConnectedTransmissionDescriptor.cpp',
    'dtv/descriptors/isdb/tsCarouselCompatibleCompositeDescriptor.cpp',
    'dtv/descriptors/isdb/tsISDBLDTLinkageDescriptor.cpp',
    'dtv/descriptors/isdb/tsISDBTargetRegionDescriptor.cpp',
    'dtv/descriptors/isdb/tsSIParameterDescriptor.cpp',
    'dtv/descriptors/isdb/tsContentAvailabilityDescriptor.cpp',
    'dtv/descriptors/isdb/tsISDBNetworkIdentifierDescriptor.cpp',
    'dtv/descriptors/isdb/tsDataContentDescriptor.cpp',
    'dtv/descriptors/isdb/tsBroadcasterNameDescriptor.cpp',
    'dtv/descriptors/isdb/tsExtendedBroadcasterDescriptor.cpp',
    'dtv/descriptors/isdb/tsDataComponentDescriptor.cpp',
    'dtv/descriptors/isdb/tsSeriesDescriptor.cpp',
    'dtv/descriptors/isdb/tsCAContractInfoDescriptor.cpp',
    'dtv/descriptors/isdb/tsISDBComponentGroupDescriptor.cpp',
    'dtv/descriptors/isdb/tsDigitalCopyControlDescriptor.cpp',
    'dtv/descriptors/isdb/tsPartialReceptionDescriptor.cpp',
    'dtv/descriptors/isdb/tsISDBTerrestrialDeliverySystemDescriptor.cpp',
    'dtv/descriptors/isdb/tsSystemManagementDescriptor.cpp',
    'dtv/descriptors/isdb/tsEmergencyInformationDescriptor.cpp',
    'dtv/descriptors/isdb/tsTSInformationDescriptor.cpp',
    'dtv/descriptors/isdb/tsAudioComponentDescriptor.cpp',
    'dtv/broadcast/tsTunerBase.cpp',
    'dtv/broadcast/tsTuner.cpp',
    'dtv/broadcast/tsSignalState.cpp',
    'dtv/broadcast/tsBitrateDifferenceDVBT.cpp',
    'dtv/broadcast/tsLNB.cpp',
    'dtv/broadcast/tsDeliverySystem.cpp',
    'dtv/broadcast/tsTunerEmulator.cpp',
    'dtv/broadcast/tsLegacyBandWidth.cpp',
    'dtv/broadcast/tsModulation.cpp',
    'dtv/broadcast/tsModulationArgs.cpp',
    'dtv/broadcast/tsTSScanner.cpp',
    'dtv/broadcast/tsHFBand.cpp',
    'dtv/broadcast/tsChannelFile.cpp',
    'dtv/broadcast/tsTunerArgs.cpp',
    'dtv/tables/atsc/tsRRT.cpp',
    'dtv/tables/atsc/tsDCCSCT.cpp',
    'dtv/tables/atsc/tsSTT.cpp',
    'dtv/tables/atsc/tsDCCT.cpp',
    'dtv/tables/atsc/tsTVCT.cpp',
    'dtv/tables/atsc/tsCVCT.cpp',
    'dtv/tables/atsc/tsETT.cpp',
    'dtv/tables/atsc/tsMGT.cpp',
    'dtv/tables/atsc/tsATSCEIT.cpp',
    'dtv/tables/atsc/tsVCT.cpp',
    'dtv/tables/tsAbstractDescriptorsTable.cpp',
    'dtv/tables/tsAbstractTransportListTable.cpp',
    'dtv/tables/dvb/tsNIT.cpp',
    'dtv/tables/dvb/tsTOT.cpp',
    'dtv/tables/dvb/tsBAT.cpp',
    'dtv/tables/dvb/tsRNT.cpp',
    'dtv/tables/dvb/tsRST.cpp',
    'dtv/tables/dvb/tsTDT.cpp',
    'dtv/tables/dvb/tsINT.cpp',
    'dtv/tables/dvb/tsAIT.cpp',
    'dtv/tables/dvb/tsSelectionInformationTable.cpp',
    'dtv/tables/dvb/tsRCT.cpp',
    'dtv/tables/dvb/tsSAT.cpp',
    'dtv/tables/dvb/tsDiscontinuityInformationTable.cpp',
    'dtv/tables/dvb/tsUNT.cpp',
    'dtv/tables/dvb/tsCIT.cpp',
    'dtv/tables/dvb/tsEIT.cpp',
    'dtv/tables/dvb/tsSDT.cpp',
    'dtv/tables/scte/tsSpliceInformationTable.cpp',
    'dtv/tables/scte/tsCableEmergencyAlertTable.cpp',
    'dtv/tables/mpeg/tsDSMCCUserToNetworkMessage.cpp',
    'dtv/tables/mpeg/tsPMT.cpp',
    'dtv/tables/mpeg/tsDSMCCDownloadDataMessage.cpp',
    'dtv/tables/mpeg/tsPAT.cpp',
    'dtv/tables/mpeg/tsTSDT.cpp',
    'dtv/tables/mpeg/tsCAT.cpp',
    'dtv/tables/mpeg/tsDSMCCStreamDescriptorsTable.cpp',
    'dtv/tables/tsAbstractTable.cpp',
    'dtv/tables/isdb/tsLIT.cpp',
    'dtv/tables/isdb/tsERT.cpp',
    'dtv/tables/isdb/tsLDT.cpp',
    'dtv/tables/isdb/tsBIT.cpp',
    'dtv/tables/isdb/tsCDT.cpp',
    'dtv/tables/isdb/tsDLT.cpp',
    'dtv/tables/isdb/tsPCAT.cpp',
    'dtv/tables/isdb/tsDCT.cpp',
    'dtv/tables/isdb/tsNBIT.cpp',
    'dtv/tables/isdb/tsSDTT.cpp',
    'dtv/tables/isdb/tsITT.cpp',
    'dtv/tables/tsAbstractLongTable.cpp',
    'dtv/transport/tsTSDatagramOutputHandlerInterface.cpp',
    'dtv/transport/tsTSPacket.cpp',
    'dtv/transport/tsTSPacketMetadata.cpp',
    'dtv/transport/tsTSDumpArgs.cpp',
    'dtv/transport/tsTSFileOutputResync.cpp',
    'dtv/transport/tsTSPacketStream.cpp',
    'dtv/transport/tsTSPacketQueue.cpp',
    'dtv/transport/tsTSFileInputArgs.cpp',
    'dtv/transport/tsTSFile.cpp',
    'dtv/transport/tsTSFileInputBuffered.cpp',
    'dtv/transport/tsTSPacketFormat.cpp',
    'dtv/transport/tsTSForkPipe.cpp',
    'dtv/transport/tsTS.cpp',
    'dtv/transport/tsTSFuzzingArgs.cpp',
    'dtv/transport/tsTSFuzzing.cpp',
    'dtv/transport/tsTSDatagramOutput.cpp',
    'dtv/transport/tsTSPacketWindow.cpp',
    'dtv/transport/tsTSFileOutputArgs.cpp',
    'dtv/transport/tsTimeSource.cpp',
    'dtv/demux/tsSectionProviderInterface.cpp',
    'dtv/demux/tsFileNameRate.cpp',
    'dtv/demux/tsTableHandlerInterface.cpp',
    'dtv/demux/tsSignalizationHandlerInterface.cpp',
    'dtv/demux/tsStandaloneTableDemux.cpp',
    'dtv/demux/tsSectionDemux.cpp',
    'dtv/demux/tsInvalidSectionHandlerInterface.cpp',
    'dtv/demux/tsAbstractPacketizer.cpp',
    'dtv/demux/tsSignalizationDemux.cpp',
    'dtv/demux/tsSectionHandlerInterface.cpp',
    'dtv/demux/tsCyclingPacketizer.cpp',
    'dtv/demux/tsDemuxedData.cpp',
    'dtv/demux/tsPacketizer.cpp',
    'dtv/demux/tsTimeTrackerDemux.cpp',
    'dtv/demux/tsAbstractDemux.cpp',
    'dtv/demux/tsOneShotPacketizer.cpp',
    'dtv/demux/tsFileNameRateList.cpp',
    'dtv/mpe/tsMPEDemux.cpp',
    'dtv/mpe/tsMPEPacket.cpp',
    'dtv/mpe/tsMPEHandlerInterface.cpp',
    'dtv/epg/tsEITRepetitionProfile.cpp',
    'dtv/epg/tsEITGenerator.cpp',
    'dtv/epg/tsEITProcessor.cpp',
    'dtv/hls/tshlsMediaSegment.cpp',
    'dtv/hls/tshlsAltPlayList.cpp',
    'dtv/hls/tshlsPlayList.cpp',
    'dtv/hls/tshls.cpp',
    'dtv/hls/tshlsMediaElement.cpp',
    'dtv/hls/tshlsTagAttributes.cpp',
    'dtv/hls/tshlsMediaPlayList.cpp',
    'tsduck.cpp',
    'plugins/private/tstsswitchCore.cpp',
    'plugins/private/tstspProcessorExecutor.cpp',
    'plugins/private/tstsmuxOutputExecutor.cpp',
    'plugins/private/tstsmuxPluginExecutor.cpp',
    'plugins/private/tstsmuxCore.cpp',
    'plugins/private/tstsmuxInputExecutor.cpp',
    'plugins/private/tstsswitchOutputExecutor.cpp',
    'plugins/private/tstspPluginExecutor.cpp',
    'plugins/private/tstspInputExecutor.cpp',
    'plugins/private/tstspOutputExecutor.cpp',
    'plugins/private/tsRISTPluginData.cpp',
    'plugins/private/tstslatencymonitorInputExecutor.cpp',
    'plugins/private/tstsswitchCommandListener.cpp',
    'plugins/private/tstsswitchEventDispatcher.cpp',
    'plugins/private/tstsswitchInputExecutor.cpp',
    'plugins/private/tstspControlServer.cpp',
    'plugins/private/tstsswitchPluginExecutor.cpp',
    'plugins/private/tstspJointTermination.cpp',
    'plugins/infra/tsTSP.cpp',
    'plugins/infra/tsDuckExtensionRepository.cpp',
    'plugins/infra/tsPluginEventContext.cpp',
    'plugins/infra/tsPluginOptions.cpp',
    'plugins/infra/tsPluginEventHandlerInterface.cpp',
    'plugins/infra/tsPluginThread.cpp',
    'plugins/infra/tsPluginEventData.cpp',
    'plugins/infra/tsPluginRepository.cpp',
    'plugins/infra/tsArgsWithPlugins.cpp',
    'plugins/infra/tsPluginEventHandlerRegistry.cpp',
    'plugins/plugins/tsMemoryOutputPlugin.cpp',
    'plugins/plugins/tsIPInputPlugin.cpp',
    'plugins/plugins/tsAbstractHTTPInputPlugin.cpp',
    'plugins/plugins/tsDropOutputPlugin.cpp',
    'plugins/plugins/tsHTTPOutputPlugin.cpp',
    'plugins/plugins/tsPushInputPlugin.cpp',
    'plugins/plugins/tsAbstractDuplicateRemapPlugin.cpp',
    'plugins/plugins/tsMemoryInputPlugin.cpp',
    'plugins/plugins/tsProcessorPlugin.cpp',
    'plugins/plugins/tsIPOutputPlugin.cpp',
    'plugins/plugins/tsAbstractTablePlugin.cpp',
    'plugins/plugins/tsRISTOutputPlugin.cpp',
    'plugins/plugins/tsOutputPlugin.cpp',
    'plugins/plugins/tsDebugPlugin.cpp',
    'plugins/plugins/tsPSIPlugin.cpp',
    'plugins/plugins/tshlsInputPlugin.cpp',
    'plugins/plugins/tsHTTPInputPlugin.cpp',
    'plugins/plugins/tshlsOutputPlugin.cpp',
    'plugins/plugins/tsFilePacketPlugin.cpp',
    'plugins/plugins/tsTeletextPlugin.cpp',
    'plugins/plugins/tsPlugin.cpp',
    'plugins/plugins/tsForkPacketPlugin.cpp',
    'plugins/plugins/tsSkipPlugin.cpp',
    'plugins/plugins/tsTablesPlugin.cpp',
    'plugins/plugins/tsRISTInputPlugin.cpp',
    'plugins/plugins/tsForkOutputPlugin.cpp',
    'plugins/plugins/tsSRTInputPlugin.cpp',
    'plugins/plugins/tsFileOutputPlugin.cpp',
    'plugins/plugins/tsSRTOutputPlugin.cpp',
    'plugins/plugins/tsFileInputPlugin.cpp',
    'plugins/plugins/tsAbstractDatagramInputPlugin.cpp',
    'plugins/plugins/tsInputPlugin.cpp',
    'plugins/plugins/tsIPPacketPlugin.cpp',
    'plugins/plugins/tsForkInputPlugin.cpp',
    'plugins/plugins/tsAbstractDescrambler.cpp',
    'plugins/plugins/tsNullInputPlugin.cpp',
    'plugins/apps/tsInputSwitcher.cpp',
    'plugins/apps/tsTSProcessorArgs.cpp',
    'plugins/apps/tsLatencyMonitorArgs.cpp',
    'plugins/apps/tsMuxerArgs.cpp',
    'plugins/apps/tsLatencyMonitor.cpp',
    'plugins/apps/tsTSProcessor.cpp',
    'plugins/apps/tsInputSwitcherArgs.cpp',
    'plugins/apps/tsMuxer.cpp',
    'plugins/apps/tsTSPControlCommand.cpp',
    'base/system/tsPollFilesListener.cpp',
    'base/system/tsPollFiles.cpp',
    'base/system/tsAbstractReadStreamInterface.cpp',
    'base/system/tsCOM.cpp',
    'base/system/tsInputRedirector.cpp',
    'base/system/tsThreadAttributes.cpp',
    'base/system/tsConsoleState.cpp',
    'base/system/tsTime.cpp',
    'base/system/tsUserInterrupt.cpp',
    'base/system/tsThread.cpp',
    'base/system/tsAbstractWriteStreamInterface.cpp',
    'base/system/tsSysUtils.cpp',
    'base/system/tsSysInfo.cpp',
    'base/system/tsFileUtils.cpp',
    'base/system/tsApplicationSharedLibrary.cpp',
    'base/system/tsSystemMonitor.cpp',
    'base/system/tsForkPipe.cpp',
    'base/system/tsEnvironment.cpp',
    'base/system/tsInterruptHandler.cpp',
    'base/system/tsFatal.cpp',
    'base/system/tsOutputRedirector.cpp',
    'base/system/tsFileNameGenerator.cpp',
    'base/system/tsOutputPager.cpp',
    'base/system/tsRegistry.cpp',
    'base/system/tsPagerArgs.cpp',
    'base/system/tsAbortInterface.cpp',
    'base/system/tsPolledFile.cpp',
    'base/system/tsSharedLibrary.cpp',
    'base/network/tsIPPacket.cpp',
    'base/network/tsUDPSocket.cpp',
    'base/network/tsTCPSocket.cpp',
    'base/network/tsUDPReceiverArgs.cpp',
    'base/network/tsTCPServer.cpp',
    'base/network/tsSocket.cpp',
    'base/network/tsTCPConnection.cpp',
    'base/network/tsUDPReceiver.cpp',
    'base/network/tsPcapFilter.cpp',
    'base/network/tsIPProtocols.cpp',
    'base/network/tsSRTSocket.cpp',
    'base/network/tsPcapFile.cpp',
    'base/network/tsUDPReceiverArgsList.cpp',
    'base/network/tsURL.cpp',
    'base/network/tsWebRequestArgs.cpp',
    'base/network/tsTelnetConnection.cpp',
    'base/network/tsMACAddress.cpp',
    'base/network/tsIPUtils.cpp',
    'base/network/tsWebRequest.cpp',
    'base/network/tsIPAddress.cpp',
    'base/network/tsIPAddressMask.cpp',
    'base/network/tsAbstractNetworkAddress.cpp',
    'base/network/tsNetworkInterface.cpp',
    'base/network/tsPcapStream.cpp',
    'base/network/tsIPSocketAddress.cpp',
    'base/network/tsRIST.cpp',
    'base/algo/tsWatchDog.cpp',
    'base/algo/tsWatchDogHandlerInterface.cpp',
    'base/algo/tsUID.cpp',
    'base/algo/tsRingNode.cpp',
    'base/algo/tsAbstractOutputStream.cpp',
    'base/algo/tsBoolPredicate.cpp',
    'base/private/tsTimeConfigurationFile.cpp',
    'base/linux/tsSignalAllocator.cpp',
    'base/report/tsErrCodeReport.cpp',
    'base/report/tsReport.cpp',
    'base/report/tsSeverity.cpp',
    'base/report/tsNullReport.cpp',
    'base/report/tsAsyncReportArgs.cpp',
    'base/report/tsAsyncReport.cpp',
    'base/report/tsCerrReport.cpp',
    'base/app/tsDuckConfigFile.cpp',
    'base/app/tsNames.cpp',
    'base/app/tsConfigSection.cpp',
    'base/app/tsObjectRepository.cpp',
    'base/app/tsVersionInfo.cpp',
    'base/app/tsConfigFile.cpp',
    'base/app/tsEditLine.cpp',
    'base/app/tsCommandLine.cpp',
    'base/app/tsObject.cpp',
    'base/app/tsMain.cpp',
    'base/app/tsArgs.cpp',
    'base/app/tsCommandLineHandler.cpp',
    'base/app/tsGitHubRelease.cpp',
    'base/unix/tsWebRequestGuts.cpp',
    'base/unix/tsSysCtl.cpp',
    'base/text/tsGrid.cpp',
    'base/text/tsTextParser.cpp',
    'base/text/tsExpressions.cpp',
    'base/text/tsTextTable.cpp',
    'base/text/tsTextFormatter.cpp',
    'base/text/tsTLVSyntax.cpp',
    'base/json/tsjson.cpp',
    'base/json/tsjsonOutputArgs.cpp',
    'base/json/tsjsonRunningDocument.cpp',
    'base/json/tsjsonObject.cpp',
    'base/json/tsjsonArray.cpp',
    'base/json/tsjsonValue.cpp',
    'base/json/tsjsonFalse.cpp',
    'base/json/tsjsonNumber.cpp',
    'base/json/tsjsonNull.cpp',
    'base/json/tsjsonTrue.cpp',
    'base/json/tsjsonString.cpp',
    'base/types/tsIntegerUtils.cpp',
    'base/types/tsStringifyInterface.cpp',
    'base/types/tsBCD.cpp',
    'base/types/tsBuffer.cpp',
    'base/types/tsMemory.cpp',
    'base/types/tsAbstractNumber.cpp',
    'base/types/tsArgMix.cpp',
    'base/types/tsUString.cpp',
    'base/types/tsDisplayInterface.cpp',
    'base/types/tsException.cpp',
    'base/types/tsUChar.cpp',
    'base/types/tsByteBlock.cpp',
    'base/xml/tsxmlDeclaration.cpp',
    'base/xml/tsxmlTweaks.cpp',
    'base/xml/tsxmlAttribute.cpp',
    'base/xml/tsxmlModelDocument.cpp',
    'base/xml/tsxmlText.cpp',
    'base/xml/tsxmlDocument.cpp',
    'base/xml/tsxmlJSONConverter.cpp',
    'base/xml/tsxmlRunningDocument.cpp',
    'base/xml/tsxmlElement.cpp',
    'base/xml/tsxmlPatchDocument.cpp',
    'base/xml/tsxmlUnknown.cpp',
    'base/xml/tsxmlNode.cpp',
    'base/xml/tsxmlComment.cpp',

    'dektec/tsDektecUtils.cpp',
    'vatek/tsVatekUtils.cpp',

    'vatek/tsVatekOutputPlugin.cpp',
    'vatek/tsVatekControl.cpp',

    'dektec/private/tsDVBT2ParamsEvaluator.cpp',
    'dektec/private/tsDektecDevice.cpp',
    'dektec/private/tsDektecArgsUtils.cpp',
    'dektec/private/tsDektecVPD.cpp',
    'dektec/tsDektecControl.cpp',
    'dektec/tsDektecDeviceInfo.cpp',
    'dektec/tsDektecOutputPlugin.cpp',
    'dektec/tsDektecInputPlugin.cpp',

    'dtv/cas/tsPCSC.cpp',


    'java/private/tsjni.cpp',
    'java/private/tsjniDuckContext.cpp',
    'java/private/tsjniNativeLibrary.cpp',
    'java/private/tsjniSystemMonitor.cpp',
    'java/private/tsjniPluginEventHandler.cpp',
    'java/private/tsjniSectionFile.cpp',
    'java/private/tsjniAsyncReport.cpp',
    'java/private/tsjniReport.cpp',
    'java/private/tsjniTSProcessor.cpp',
    'java/private/tsjniInfo.cpp',
    'java/private/tsjniSyncReport.cpp',
    'java/private/tsjniPluginEventHandlerRegistry.cpp',
    'java/private/tsjniInputSwitcher.cpp',


    'python/private/tspyInputSwitcher.cpp',
    'python/private/tspyPluginEventHandlerRegistry.cpp',
    'python/private/tspy.cpp',
    'python/private/tspyPluginEventHandler.cpp',
    'python/private/tspyTSProcessor.cpp',
    'python/private/tspySyncReport.cpp',
    'python/private/tspySystemMonitor.cpp',
    'python/private/tspyDuckContext.cpp',
    'python/private/tspyInfo.cpp',
    'python/private/tspyAsyncReport.cpp',
    'python/private/tspySectionFile.cpp',
    'python/private/tspyReport.cpp'
]

SOURCES_MAC = [
    'base/mac/tsMacPList.cpp',
    'hides/mac/tsHiDesDevice.cpp',
    'dtv/mac/tsTunerDevice.cpp',
]

SOURCES_BSD = [
    'hides/bsd/tsHiDesDevice.cpp',
    'dtv/bsd/tsTunerDevice.cpp',
]

SOURCES_WIN = [
    'base/windows/tsWebRequestGuts.cpp',
    'base/windows/tsWinUtils.cpp',
    'base/windows/tsComIds.cpp',

    'hides/windows/tsHiDesDevice.cpp',

    'dtv/windows/tsMediaTypeUtils.cpp',
    'dtv/windows/tsSinkFilter.cpp',
    'dtv/windows/tsDirectShowGraph.cpp',
    'dtv/windows/tsDirectShowTest.cpp',
    'dtv/windows/tsDirectShowNetworkType.cpp',
    'dtv/windows/tsDirectShowUtils.cpp',
    'dtv/windows/tsTunerDevice.cpp',
    'dtv/windows/tsDirectShowFilterCategory.cpp',
    'dtv/windows/tsTunerGraph.cpp',
]

INC_DIRS = [
#    'base',
#    'config',
#    'crypto',
#    'dektec',
#    'dtv',
#    'hides',
#    'java',
#    'plugins',
#    'python',
#    'vatek',

    'hides',
    'hides/private',
#    'hides/windows',
#    'hides/bsd',
    'hides/linux',
#    'hides/mac',
    'python',
    'python/private',
    'crypto',
    'crypto/private',
    'java',
    'java/private',
    'java/src',
    'java/src/io',
    'java/src/io/tsduck',
    'dektec',
    'dektec/private',
    'vatek',
    'dtv',
    'dtv/charset',
    'dtv/timing',
    'dtv/private',
#    'dtv/windows',
#    'dtv/bsd',
    'dtv/linux',
    'dtv/pes',
    'dtv/standards',
    'dtv/t2mi',
    'dtv/codec',
    'dtv/encap',
    'dtv/cas',
    'dtv/analysis',
    'dtv/teletext',
    'dtv/signalization',
    'dtv/dvbsimulcrypt',
    'dtv/descriptors',
    'dtv/descriptors/atsc',
    'dtv/descriptors/eacem',
    'dtv/descriptors/dvb',
    'dtv/descriptors/avs',
    'dtv/descriptors/scte',
    'dtv/descriptors/dtg',
    'dtv/descriptors/mpeg',
    'dtv/descriptors/nordig',
    'dtv/descriptors/eutelsat',
    'dtv/descriptors/uwa',
    'dtv/descriptors/aom',
    'dtv/descriptors/australia',
    'dtv/descriptors/sky',
    'dtv/descriptors/isdb',
    'dtv/broadcast',
    'dtv/tables',
    'dtv/tables/atsc',
    'dtv/tables/dvb',
    'dtv/tables/scte',
    'dtv/tables/mpeg',
    'dtv/tables/isdb',
    'dtv/transport',
    'dtv/demux',
    'dtv/mpe',
    'dtv/epg',
#    'dtv/mac',
    'dtv/hls',
    'plugins',
    'plugins/private',
    'plugins/infra',
    'plugins/plugins',
    'plugins/apps',
    'base',
    'base/system',
    'base/network',
    'base/cpp',
    'base/algo',
    'base/private',
#    'base/windows',
    'base/linux',
    'base/report',
    'base/app',
    'base/unix',
    'base/text',
    'base/json',
    'base/types',
    'base/xml',
#    'base/mac',
    'config'
]

#run_commmand([meson.project_source_root() / 'scripts' / 'build-tsduck-header.py', meson.project_build_root() / 'tsduck.h'])

TSDUCK_H = custom_target('tsduck.h', output: 'tsduck.h',  command: [meson.project_source_root() / 'scripts' / 'build-tsduck-header.py', '@OUTPUT@'])

DEPS = [
    dependency('libcurl'),
    dependency('openssl'),
    dependency('readline')
]


CPP_ARGS = [
    '-DTS_NO_DTAPI', '-DTS_NO_DEKTEC', '-DTS_NO_VATEK', '-DTS_NO_PCSC', '-DTS_NO_SRT', '-DTS_NO_RIST', '-DTS_NO_JAVA', '-DDTS_NO_PYTHON'
]

tsduck = library('tsduck', [SOURCES, TSDUCK_H], dependencies: DEPS, include_directories: INC_DIRS, install: true, cpp_args: CPP_ARGS)

tsduck_dep = declare_dependency(link_with: [tsduck], sources: [TSDUCK_H], include_directories: [INC_DIRS, '.'])