
PLUGINS = [
    'tsplugin_pat.cpp',
    'tsplugin_svrename.cpp',
    'tsplugin_hides.cpp',
    'tsplugin_pattern.cpp',
    'tsplugin_mux.cpp',
    'tsplugin_cat.cpp',
    'tsplugin_t2mi.cpp',
    'tsplugin_remap.cpp',
    'tsplugin_nit.cpp',
    'tsplugin_sifilter.cpp',
    'tsplugin_feed.cpp',
    'tsplugin_sdt.cpp',
    'tsplugin_bitrate_monitor.cpp',
    'tsplugin_duplicate.cpp',
    'tsplugin_pcrbitrate.cpp',
    'tsplugin_psimerge.cpp',
    'tsplugin_history.cpp',
    'tsplugin_regulate.cpp',
    'tsplugin_pcrverify.cpp',
    'tsplugin_play.cpp',
    'tsplugin_svremove.cpp',
    'tsplugin_encap.cpp',
    'tsplugin_cutoff.cpp',
    'tsplugin_sections.cpp',
    'tsplugin_continuity.cpp',
    'tsplugin_merge.cpp',
    'tsplugin_inject.cpp',
    'tsplugin_dvb.cpp',
    'tsplugin_datainject.cpp',
    'tsplugin_fuzz.cpp',
    'tsplugin_dump.cpp',
    'tsplugin_tr101_290.cpp',
    'tsplugin_rmsplice.cpp',
    'tsplugin_analyze.cpp',
    'tsplugin_nitscan.cpp',
    'tsplugin_pcradjust.cpp',
    'tsplugin_pcrcopy.cpp',
    'tsplugin_pes.cpp',
    'tsplugin_until.cpp',
    'tsplugin_bat.cpp',
    'tsplugin_rmorphan.cpp',
    'tsplugin_spliceinject.cpp',
    'tsplugin_stuffanalyze.cpp',
    'tsplugin_boostpid.cpp',
    'tsplugin_pidshift.cpp',
    'tsplugin_stats.cpp',
    'tsplugin_splicemonitor.cpp',
    'tsplugin_time.cpp',
    'tsplugin_craft.cpp',
    'tsplugin_pcap.cpp',
    'tsplugin_count.cpp',
    'tsplugin_aes.cpp',
    'tsplugin_trigger.cpp',
    'tsplugin_mpe.cpp',
    'tsplugin_timeshift.cpp',
    'tsplugin_decap.cpp',
    'tsplugin_pcredit.cpp',
    'tsplugin_limit.cpp',
    'tsplugin_slice.cpp',
    'tsplugin_svresync.cpp',
    'tsplugin_reduce.cpp',
    'tsplugin_timeref.cpp',
    'tsplugin_clear.cpp',
    'tsplugin_scrambler.cpp',
    'tsplugin_tsrename.cpp',
    'tsplugin_eit.cpp',
    'tsplugin_isdbinfo.cpp',
    'tsplugin_pcrextract.cpp',
    'tsplugin_descrambler.cpp',
    'tsplugin_mpeinject.cpp',
    'tsplugin_trace.cpp',
    'tsplugin_zap.cpp',
    'tsplugin_eitinject.cpp',
    'tsplugin_pmt.cpp',
    'tsplugin_filter.cpp'
]

TSPLUGINS = []

foreach plugin : PLUGINS
    lib = library(plugin.split('.cpp')[0], plugin, dependencies: tsduck_dep, install: true, name_prefix: '')
    TSPLUGINS += [declare_dependency(link_with:lib)]
endforeach